# Homework_2.7

./: config.ini  main.py  my_select.py  pyproject.toml
alembic/: env.py
alembic/versions/: 977e6162b9a3_init.py
database/: db.py  models.py
seed/: fill_data.py
